add basic web UI

--- a/frontend/templates/form.html
+++ b/frontend/templates/form.html
@@ -1,12 +1,12 @@
 {{ define "body" }}
-	<form method="POST" action="/form">
+	<form method="POST" action="/submit">
 		<fieldset>
 			<section>
 				<label for="input#name">New List's Name</label>
 				<input name="title" id="title" type="text"></input>
 			</section>
 			<section>
-				<label for="input#items">Items in New List</label>
+				<label for="input#items">Items in New List (separate them by a comma)</label>
 				<input name="items" id="items"></input>
 			</section>
 			<section>
