--- a/frontend/templates/form.html
+++ b/frontend/templates/form.html
@@ -6,7 +6,13 @@
 				<input name="title" id="title" type="text"></input>
 			</section>
 			<section>
-				<label for="input#items">Items in New List (separate them by a comma)</label>
+				<label for="input#separator">Character Separating List Items</label>
+				<input type="radio" name="separator" id="separator-comma" value=",">comma</input>
+				<input type="radio" name="separator" id="separator-colon" value=":">colon</input>
+				<input type="radio" name="separator" id="separator-space" value=" ">space</input>
+			</section>
+			<section>
+				<label for="input#items">Items in New List</label>
 				<input name="items" id="items"></input>
 			</section>
 			<section>
