add double space separator and set single-space as default

--- a/frontend/templates/form.html
+++ b/frontend/templates/form.html
@@ -9,7 +9,8 @@
 				<label for="input#separator">Character Separating List Items</label>
 				<input type="radio" name="separator" id="separator-comma" value=",">comma</input>
 				<input type="radio" name="separator" id="separator-colon" value=":">colon</input>
-				<input type="radio" name="separator" id="separator-space" value=" ">space</input>
+				<input type="radio" name="separator" id="separator-space" value=" " checked>space</input>
+				<input type="radio" name="separator" id="separator-dspace" value="  ">double space</input>
 			</section>
 			<section>
 				<label for="input#items">Items in New List</label>
