add some silly css

--- a/frontend/templates/main.html
+++ b/frontend/templates/main.html
@@ -4,8 +4,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Lister</title>
+	<style>
+		* {box-sizing: border-box;}
+		body {background-color:#404;color:#fc3;}
+		h1 {color:cyan;}
+		a {color:#bff;}
+	</style>
 	</head>
-	<body>
+	<body style="">
 		{{ template "body" . }}
 	</body>
 </html>
